# Renasas-led

./: CMakeLists.txt  CMakePresets.json  README.md  bare_metal.code-workspace  debug_regs.gdb
app/: main.c
bsp/: mpu.c  mpu.h
cmake/: gcc.cmake
startup/: linker.ld  startup.S
